06-Apr-2016 Issue #204. Added test LinkPrebuiltLibrary, to exercise linking libraries that already exist, and aren't built as part of a Bam build.

06-Apr-2016 Issue #197. CModuleContainer.ExtendWith now identifies any cloned object files with sources that implement Bam.Core.ICloneModule. This is to identify cases where the source file has been procedurally generated, and thus also requires cloning, so that the source generation is also merged into the module ExtendWith was invoked on.

06-Apr-2016 Issue #197. Added a new parameter to Bam.Core.Module.Create, postInitCallback, of type Bam.Core.Module.PostInitDelegate. This is similar to the PreInitDelegate, but invoked after the Module's Init function is called. This is also now an optional parameter to CloneWithPrivatePatches. This is to allow custom configuration of Module data.

06-Apr-2016 Issue #197. Added Bam.Core.ICloneModule, which modules can implement if Bam.Core.Module.CloneWithPrivatePatches is insufficient. For example, if the module has properties that must be assigned in a particular order.

05-Apr-2016 Issue #197. Added new test, EmbedStaticIntoDynamicLibrary, to exercise ExtendSource and ExtendSourcePublicly.

05-Apr-2016 Issue #197. Added ExtendSource and ExtendSourcePublicly functions to ConsoleApplication and DynamicLibrary (both C and C++ flavours), that allow containers of object files to be extended. This allows source to be grouped into a separate container module, and then merged into concrete modules. This is a mechanism analogous to linking a static library into a dynamic library, in a cross-platform environment and without any limitations of the current toolchain. ExtendSource will use any public patches on the standalone container for build only, while ExtendSourcePublicly will additional forward the patch to any callers.
